--- a/chat-zilic/src/Components/Login/Login.css
+++ b/chat-zilic/src/Components/Login/Login.css
@@ -1,7 +1,6 @@
 .login-container{
-    border: 1px solid black;
-    width: 50vw;
-    height: 60vh;
+    width: 45vw;
+    height: 70vh;
 }
 .login-header{
     font-size: 1.4rem;
@@ -10,23 +9,56 @@
     margin: 20px auto;
 }
 .input-username{
-    text-align: left;
+    text-align: center;
     margin-top: 20px;
 }
 .input-username p {
     font-size: 1.5rem;
     font-weight: bold;
+    margin: 10px auto;
+
 }
 .input-username input{
-    width: 90%;
+    width: 70%;
     height: 40px;
 }
 .input-checkbox{
     display: flex;
     flex-direction: row;
     margin: 20px;
+    justify-content: center;
 }
 .input-checkbox input{
-    margin: 5px;
+    margin: 10px;
     width: 20px;
+    cursor: pointer;
+}
+.input-button{
+    width: 100px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+.login-avatar-container{
+    width: 60%;
+    margin: 10px auto;
+}
+.login-avatar{
+    display: inline;
+}
+.image{
+    width: 55px;
+    height: 55px;
+    cursor: pointer;
+}
+.image:hover{
+    opacity: 0.5;
+}
+.choise-avatar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 40px;
+}
+.choise-avatar > p{
+   padding: 15px;
 }
